--- a/Fire Works.html
+++ b/Fire Works.html
@@ -14,6 +14,8 @@ function Vec2(x_,y_){
 
 var h=$("#c").height();
 var w=$("#c").width();
+w=$("body").width();
+h=$("body").height();
 var mousePos=new Vec2(0.0,0.0);
 var firstDot=new Vec2(0,0);
 var smallDots=[];
